# Chess

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
chess/include/: board.hpp  game.hpp  piece.hpp
chess/include/game/: legal_move_generator.hpp  moves.hpp
chess/include/pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  queen.hpp  rook.hpp
chess/src/: board.cpp  game.cpp  interface.cpp  main.cpp  piece.cpp
chess/src/game/: legal_move_generator.cpp
chess/src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
docker/: Dockerfile
include/: board.hpp  engine.hpp  game.hpp  interface.hpp  legal_move_generator.hpp  moves.hpp  piece.hpp
include/pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  queen.hpp  rook.hpp
src/: board.cpp  chess_board.cpp  engine.cpp  game.cpp  interface.cpp  legal_move_generator.cpp  main.cpp  moves.cpp  piece.cpp
src/game/: moves.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
